--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
-    "react-beautiful-dnd": "^11.0.0",
     "react-dom": "^17.0.2",
+    "react-grid-layout": "^1.2.5",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
@@ -39,7 +39,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-beautiful-dnd": "^11.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0"
   }
 }
